fix video alignment bug

--- a/public/styles/board.css
+++ b/public/styles/board.css
@@ -145,6 +145,7 @@ button:hover {
 }
 
 .video {
+  display: flex;
   position: fixed;
   top: 80px;
   right: 10px;
